--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class='container'>
             <div class='row'>
                 <div class="col-sm-3 offset-sm-1">
-                    <img src='imgs/cat.jpg' class='img-fluid' id='portrait'>
+                    <img src='imgs/cat_compressed.jpg' class='img-fluid' id='portrait'>
                 </div>
 
                 <div class="col">
@@ -111,7 +111,7 @@
                     Previously I spent a wonderful year as a research assistant in <a href="https://iiis.tsinghua.edu.cn/" target="_blank">the Institute for Interdisciplinary Information Sciences (IIIS)</a> at Tsinghua University, working with Prof. Pingzhong Tang.
                     Prior to that, I received my B.A. in Software Engineering from <a href="http://english.hust.edu.cn/" target="_blank">Huazhong University of Science and Technology (HUST)</a> in 2016.
                     
-                    My research interest lies in robust deep learning, including robustness against noisy labels, Out-of-distribution examples, and adversarial examples.
+                    My research interest lies in robust deep learning, including robustness against noisy labels, out-of-distribution examples, and adversarial examples.
                     The goal of my research is to develop reliable learning systems, which can work safely and adaptively in the presence of noisy/biased/malicious data stream in either the train or test datasets.
                     <!-- Most of my work explore, understand, and mitigate the problem settings where neural networks would naturally fails. -->
                     Research topics that I am currently working on include:
