--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
             font-size: 20px;
             font-style: italic;
           }
+          #header-text-remark {
+            font-size: 15px;
+            font-style: italic;
+          }
           .header-text-desc {
             font-size: 20px;
           }
@@ -165,6 +169,12 @@
 
                 <div class='vspace-top'>
                     <h1>Publications</h1>
+                    <!-- (* Corresponding author; &#8224 Equal contribution) -->
+                    <!-- <span style="font-size: 15px; vertical-align: bottom;">(* Corresponding author; &#8224 Equal contribution)</span> -->
+                </div>
+
+                <div id='header-text-remark'>
+                    ( <sup>*</sup> Corresponding author; <sup>&#8224</sup> Equal contribution)
                 </div>
 
                 <div class='row vspace-top'>
@@ -182,7 +192,7 @@
                             Under Review
                         </div>
                         <div class='paper-authors'>
-                            <u>Hongxin Wei</u>, Lue Tao, Renchunzi Xie, Lei Feng, Bo An
+                            <b>Hongxin Wei</b>, Lue Tao, Renchunzi Xie, Lei Feng, Bo An
                         </div>
                     </div>
                 </div>
@@ -202,7 +212,7 @@
                             Under Review
                         </div>
                         <div class='paper-authors'>
-                            Renchunzi Xie, <u>Hongxin Wei*</u>, Lei Feng,  Bo An.
+                            Renchunzi Xie, <b>Hongxin Wei</b> <sup>*</sup>, Lei Feng,  Bo An.
                         </div>
                     </div>
                 </div>
@@ -222,7 +232,7 @@
                             NeurIPS 2021
                         </div>
                         <div class='paper-authors'>
-                            <u>Hongxin Wei</u>, Lue Tao, Renchunzi Xie, Bo An.
+                            <b>Hongxin Wei</b>, Lue Tao, Renchunzi Xie, Bo An.
                         </div>
                         <div>
                             <a href="https://arxiv.org/pdf/2106.10891.pdf">[Paper]</a>
@@ -243,7 +253,7 @@
                         BMVC 2021
                       </div>
                       <div class='paper-authors'>
-                        Ziqi Zhang, Yuexiang Li, <u>Hongxin Wei</u>, Kai Ma, Tao Xu, Yefeng Zheng
+                        Ziqi Zhang, Yuexiang Li, <b>Hongxin Wei</b>, Kai Ma, Tao Xu, Yefeng Zheng
                       </div>
                       <div>
                         <a href="https://arxiv.org/pdf/2110.08866.pdf">[Paper]</a>
@@ -266,7 +276,7 @@
                             SIGKDD 2021
                         </div>
                         <div class='paper-authors'>
-                            Lei Feng, Senlin Shu, Yuzhou Cao, Lue Tao, <u>Hongxin Wei</u>, Tao Xiang, Bo An, Gang Niu.
+                            Lei Feng, Senlin Shu, Yuzhou Cao, Lue Tao, <b>Hongxin Wei</b>, Tao Xiang, Bo An, Gang Niu.
                         </div>
                         <div>
                             <a href="https://personal.ntu.edu.sg/boan/papers/KDD21_Multiinstance.pdf">[Paper]</a>
@@ -287,7 +297,7 @@
                             Preprints
                         </div>
                         <div class='paper-authors'>
-                            <u>Hongxin Wei</u>, Lei Feng, Rundong Wang, Bo An.
+                            <b>Hongxin Wei</b>, Lei Feng, Rundong Wang, Bo An.
                         </div>
                         <div>
                             <a href="https://arxiv.org/pdf/2012.05273.pdf">[Paper]</a>
@@ -308,7 +318,7 @@
 				            Under Review
                         </div>
                         <div class='paper-authors'>
-                            <u>Hongxin Wei</u>, Renchunzi Xie, Lei Feng, Bo Han, Bo An.
+                            <b>Hongxin Wei</b>, Renchunzi Xie, Lei Feng, Bo Han, Bo An.
                         </div>
                     </div>
                 </div>
@@ -326,7 +336,7 @@
                             AAAI 2021
                         </div>
                         <div class='paper-authors'>
-                            Rundong Wang, <u>Hongxin Wei</u>, Bo An, Zhouyan Feng, Jun Yao.
+                            Rundong Wang, <b>Hongxin Wei</b> <sup>&#8224</sup>, Bo An, Zhouyan Feng, Jun Yao.
                         </div>
                         <div>
                             <a href="https://personal.ntu.edu.sg/boan/papers/AAAI21_Stock.pdf">[Paper]</a>
@@ -348,7 +358,7 @@
                         IEEE Intelligent Systems (IEEE-IS)
                       </div>
                       <div class='paper-authors'>
-                        Lei Feng, <u>Hongxin Wei</u>, Qingyu Guo, Zhuoyi Lin, Bo An.
+                        Lei Feng, <b>Hongxin Wei</b> <sup>*</sup>, Qingyu Guo, Zhuoyi Lin, Bo An.
                       </div>
                       <div>
                          <a href="https://ieeexplore.ieee.org/document/9252133">[Paper]</a>
@@ -370,7 +380,7 @@
                           CVPR 2020
                       </div>
                       <div class='paper-authors'>
-                        <u>Hongxin Wei</u>, Lei Feng, Xiangyu Chen, Bo An.
+                        <b>Hongxin Wei</b>, Lei Feng, Xiangyu Chen, Bo An.
                       </div>
                       <div>
                          <a href="https://arxiv.org/pdf/2003.02752.pdf">[Paper]</a>
