--- a/index.html
+++ b/index.html
@@ -159,10 +159,19 @@
 
                 <div class='row vspace-top-news'>
                     <div class="col-sm-2 news-date">
+                        April 2021
+                    </div>
+                    <div class="col">
+                        I will be serving as an <a href="https://docs.google.com/spreadsheets/d/1jqoVTZ11_0k0Za4Gsd4EU6Y3MPaXoYCXeRqvtYptyqs/edit?usp=sharing" target="_blank">external reviewer</a> for SIGKDD 2021.
+                    </div>
+                </div>
+
+                <div class='row vspace-top-news'>
+                    <div class="col-sm-2 news-date">
                         January 2021
                     </div>
                     <div class="col">
-                        I will be serving as a reviewer for ICML 2021.
+                        I will be serving as a <a href="https://icml.cc/Conferences/2021/Reviewers" target="_blank">reviewer</a> for ICML 2021.
                     </div>
                 </div>
 
@@ -235,7 +244,7 @@
                             <b>Hongxin Wei</b>, Lue Tao, Renchunzi Xie, Bo An.
                         </div>
                         <div>
-                            <a href="https://arxiv.org/pdf/2106.10891.pdf">[Paper]</a>
+                            <a href="https://arxiv.org/pdf/2106.10891.pdf" target="_blank">[Paper]</a>
                         </div>
                     </div>
                 </div>
@@ -256,7 +265,7 @@
                         Ziqi Zhang, Yuexiang Li, <b>Hongxin Wei</b>, Kai Ma, Tao Xu, Yefeng Zheng
                       </div>
                       <div>
-                        <a href="https://arxiv.org/pdf/2110.08866.pdf">[Paper]</a>
+                        <a href="https://arxiv.org/pdf/2110.08866.pdf" target="_blank">[Paper]</a>
                       </div>
                     </div>
                 </div>
@@ -279,7 +288,7 @@
                             Lei Feng, Senlin Shu, Yuzhou Cao, Lue Tao, <b>Hongxin Wei</b>, Tao Xiang, Bo An, Gang Niu.
                         </div>
                         <div>
-                            <a href="https://personal.ntu.edu.sg/boan/papers/KDD21_Multiinstance.pdf">[Paper]</a>
+                            <a href="https://personal.ntu.edu.sg/boan/papers/KDD21_Multiinstance.pdf" target="_blank">[Paper]</a>
                         </div>
                     </div>
                 </div>
@@ -300,7 +309,7 @@
                             <b>Hongxin Wei</b>, Lei Feng, Rundong Wang, Bo An.
                         </div>
                         <div>
-                            <a href="https://arxiv.org/pdf/2012.05273.pdf">[Paper]</a>
+                            <a href="https://arxiv.org/pdf/2012.05273.pdf" target="_blank">[Paper]</a>
                         </div>
                     </div>
                 </div>
@@ -339,7 +348,7 @@
                             Rundong Wang, <b>Hongxin Wei</b> <sup>&#8224</sup>, Bo An, Zhouyan Feng, Jun Yao.
                         </div>
                         <div>
-                            <a href="https://personal.ntu.edu.sg/boan/papers/AAAI21_Stock.pdf">[Paper]</a>
+                            <a href="https://personal.ntu.edu.sg/boan/papers/AAAI21_Stock.pdf" target="_blank">[Paper]</a>
                         </div>
                     </div>
                 </div>
@@ -361,7 +370,7 @@
                         Lei Feng, <b>Hongxin Wei</b> <sup>*</sup>, Qingyu Guo, Zhuoyi Lin, Bo An.
                       </div>
                       <div>
-                         <a href="https://ieeexplore.ieee.org/document/9252133">[Paper]</a>
+                         <a href="https://ieeexplore.ieee.org/document/9252133" target="_blank">[Paper]</a>
                       </div>
                     </div>
                 </div>
@@ -383,8 +392,8 @@
                         <b>Hongxin Wei</b>, Lei Feng, Xiangyu Chen, Bo An.
                       </div>
                       <div>
-                         <a href="https://arxiv.org/pdf/2003.02752.pdf">[Paper]</a>
-                         <a href="https://github.com/hongxin001/JoCoR">[Code]</a>
+                         <a href="https://arxiv.org/pdf/2003.02752.pdf" target="_blank">[Paper]</a>
+                         <a href="https://github.com/hongxin001/JoCoR" target="_blank">[Code]</a>
                       </div>
                     </div>
                 </div>
