--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <h1>Bio</h1>
                 <p>
                     I am a thrid-year Ph.D. student at <a href="http://scse.ntu.edu.sg/Pages/Home.aspx" target="_blank">School of Computer Science and Engineering</a>, <a href="https://www.ntu.edu.sg/Pages/home.aspx" target="_blank">Nanyang Technological University</a>, supervised by <a href="https://personal.ntu.edu.sg/boan/" target="_blank">Prof. Bo An</a>.
-                    Previously I spent a wonderful year as a research assistant in <a href="https://iiis.tsinghua.edu.cn/" target="_blank">the Institute for Interdisciplinary Information Sciences</a> at Tsinghua University, working with Prof. Pingzhong Tang.
+                    Previously I spent a wonderful year as a research assistant in <a href="https://iiis.tsinghua.edu.cn/" target="_blank">the Institute for Interdisciplinary Information Sciences</a> at Tsinghua University, working with <a href="https://dblp.org/pid/96/3886.html" target="_blank">Prof. Pingzhong Tang</a>.
                     Prior to that, I received my B.E. in Software Engineering from <a href="http://english.hust.edu.cn/" target="_blank">Huazhong University of Science and Technology</a> in 2016.
                 </p>
                 <p>
