--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Hongxin Wei @ NTU</title>
-
+    <link rel="icon" href="imgs/logo.ico" type="image/x-icon">
     <!-- Meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
