--- a/index.html
+++ b/index.html
@@ -398,6 +398,53 @@
                       </div>
                     </div>
                 </div>
+
+                <!-- <div class='vspace-top'>
+                    <h1>Collaborators</h1>
+                </div>
+                <div class='row vspace-top-news'>
+                    <div class="col">
+                        <li><a href="https://lfeng-ntu.github.io/" target="_blank">Lei Feng</a> </li>
+                    </div>
+                </div>
+
+                <div class='row vspace-top-news'>
+                    <div class="col">
+                        <li><a href="https://bhanml.github.io/" target="_blank">Bo Han</a> </li>
+                    </div>
+                </div>
+
+                
+                <div class='row vspace-top-news'>
+                    <div class="col">
+                        <li><a href="https://scholar.google.com/citations?user=JEVpgE8AAAAJ&hl=en" target="_blank">Rundong Wang</a> </li>
+                    </div>
+                </div>
+
+                <div class='row vspace-top-news'>
+                    <div class="col">
+                        <li><a href="http://parnec.nuaa.edu.cn/2020/0623/c12783a205854/page.htm" target="_blank">Lue Tao</a> </li>
+                    </div>
+                </div>
+
+                <div class='row vspace-top-news'>
+                    <div class="col">
+                        <li><a href="https://scholar.google.com/citations?user=EQSNE-wAAAAJ&hl=en" target="_blank">Renchunzi Xie</a> </li>
+                    </div>
+                </div>
+
+                <div class='row vspace-top-news'>
+                    <div class="col">
+                        <li><a href="https://dblp.org/pid/256/5052.html" target="_blank">Yuzhou Cao</a> </li>
+                    </div>
+                </div>
+
+                <div class='row vspace-top-news'>
+                    <div class="col">
+                        <li><a href="https://bhanml.github.io/" target="_blank">Ziqi Zhang</a> </li>
+                    </div>
+                </div> -->
+
                 <div class='vspace-top'>
                     <h1>Relevant Conferences</h1>
                 </div>
