--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     Hongxin Wei
                   </div>
                   <div id='header-text-email'>
-                    Ph.D. student @ School of Computer Science and Engineering </br> Nanyang Technological University
+                    Ph.D. student @ NTU, Singapore
                   </div>
                   <div id='header-text-email'>
                     hongxin001 [at] e.ntu.edu.sg  /  owenwei [at] ntu.edu.sg
