--- a/index.html
+++ b/index.html
@@ -42,7 +42,11 @@
           }
           #header-text-email {
             font-size: 20px;
+            line-height: 50px;
             font-style: italic;
+          }
+          #header-text-title {
+            font-size: 20px;
           }
           #header-text-remark {
             font-size: 15px;
@@ -88,9 +92,10 @@
                   <div id='header-text-name'>
                     Hongxin Wei
                   </div>
-                  <div id='header-text-email'>
+                  <div id='header-text-title'>
                     Ph.D. student @ NTU, Singapore
                   </div>
+                <!-- </br> -->
                   <div id='header-text-email'>
                     hongxin001 [at] e.ntu.edu.sg  /  owenwei [at] ntu.edu.sg
                   </div>
