--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                   </div>
                 <!-- </br> -->
                   <div id='header-text-email'>
-                    hongxin001 [at] e.ntu.edu.sg  /  owenwei [at] ntu.edu.sg
+                    hongxin001 [at] e.ntu.edu.sg
                   </div>
                   <div>
                     <a href="https://github.com/hongxin001", target="_blank">[GitHub]</a>
