--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                             Under Review
                         </div>
                         <div class='paper-authors'>
-                            <b>Hongxin Wei</b>, Lue Tao, Renchunzi Xie, Lei Feng, Bo An
+                            <b>Hongxin Wei</b>, Lue Tao, Renchunzi Xie, <a href="https://lfeng-ntu.github.io/" target="_blank" style="color:#4f6071">Lei Feng</a>, Bo An
                         </div>
                     </div>
                 </div>
