--- a/index.html
+++ b/index.html
@@ -139,6 +139,15 @@
 
                 <div class='row vspace-top-news'>
                     <div class="col-sm-2 news-date">
+                        Nov 2021
+                    </div>
+                    <div class="col">
+                        I will be serving as a reviewer for CVPR 2022.
+                    </div>
+                </div>
+
+                <div class='row vspace-top-news'>
+                    <div class="col-sm-2 news-date">
                         October 2021
                     </div>
                     <div class="col">
