--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                             Under Review
                         </div>
                         <div class='paper-authors'>
-                            <b>Hongxin Wei</b>, Lue Tao, Renchunzi Xie, <a href="https://lfeng-ntu.github.io/" target="_blank" style="color:#4f6071">Lei Feng</a>, Bo An
+                            <b>Hongxin Wei</b>, <a href="https://tlmichael.github.io/" target="_blank" style="color:#4f6071">Lue Tao</a>, Renchunzi Xie, <a href="https://lfeng-ntu.github.io/" target="_blank" style="color:#4f6071">Lei Feng</a>, Bo An
                         </div>
                     </div>
                 </div>
