--- a/index.html
+++ b/index.html
@@ -137,6 +137,8 @@
                     <h1>News</h1>
                 </div>
 
+
+
                 <div class='row vspace-top-news'>
                     <div class="col-sm-2 news-date">
                         November 2021
@@ -145,6 +147,16 @@
                         I will be serving as a reviewer for CVPR 2022.
                     </div>
                 </div>
+
+                <div class='row vspace-top-news'>
+                    <div class="col-sm-2 news-date">
+                        October 2021
+                    </div>
+                    <div class="col">
+                        I will be serving as a program committee member for SDM 2022.
+                    </div>
+                </div>
+
 
                 <div class='row vspace-top-news'>
                     <div class="col-sm-2 news-date">
