--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                         October 2021
                     </div>
                     <div class="col">
-                        I am honored to receive NeurIPS 2021 Outstanding Reviewer Award (top 8% of reviewers).
+                        I am honored to receive NeurIPS 2021 <a href="https://nips.cc/Conferences/2021/ProgramCommittee" target="_blank">Outstanding Reviewer Award</a> (top 8% of reviewers).
                     </div>
                 </div>
 
@@ -181,9 +181,10 @@
                         April 2021
                     </div>
                     <div class="col">
-                        I will be serving as a reviewer for NeurIPS 2021.
+                        I will be serving as a <a href="https://nips.cc/Conferences/2021/ProgramCommittee" target="_blank">reviewer</a> for NeurIPS 2021.
                     </div>
                 </div>
+                
 
                 <div class='row vspace-top-news'>
                     <div class="col-sm-2 news-date">
