--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                             GearNet: Stepwise Dual Learning for Weakly Supervised Domain Adaptation.
                         </div>
                         <div class='paper-desc'>
-                            Under Review
+                            AAAI 2022
                         </div>
                         <div class='paper-authors'>
                             Renchunzi Xie, <b>Hongxin Wei</b> <sup>*</sup>, Lei Feng,  Bo An.
