--- a/index.html
+++ b/index.html
@@ -137,7 +137,14 @@
                     <h1>News</h1>
                 </div>
 
-
+                <div class='row vspace-top-news'>
+                    <div class="col-sm-2 news-date">
+                        December 2021
+                    </div>
+                    <div class="col">
+                        I will be serving as a program committee member for KDD 2022.
+                    </div>
+                </div>
 
                 <div class='row vspace-top-news'>
                     <div class="col-sm-2 news-date">
