--- a/index.html
+++ b/index.html
@@ -142,6 +142,24 @@
                         December 2021
                     </div>
                     <div class="col">
+                        I will be serving as a senior program committee member for ICML 2022.
+                    </div>
+                </div>
+
+                <div class='row vspace-top-news'>
+                    <div class="col-sm-2 news-date">
+                        December 2021
+                    </div>
+                    <div class="col">
+                        I will be serving as a program committee member for SIGKDD 2022.
+                    </div>
+                </div>
+
+                <div class='row vspace-top-news'>
+                    <div class="col-sm-2 news-date">
+                        December 2021
+                    </div>
+                    <div class="col">
                         I will be serving as a program committee member for SIGKDD 2022.
                     </div>
                 </div>
