--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         December 2021
                     </div>
                     <div class="col">
-                        I will be serving as a senior program committee member for ICML 2022.
+                        I will be serving as a reviewer for ICML 2022.
                     </div>
                 </div>
 
