--- a/index.html
+++ b/index.html
@@ -240,6 +240,68 @@
 
                     <div class="col">
                         <div class='paper-title'>
+                            Can Adversarial Training Be Manipulated By Non-Robust Features?
+                        </div>
+                        <div class='paper-desc'>
+                            Under Review
+                        </div>
+                        <div class='paper-authors'>
+                            <a href="https://tlmichael.github.io/" target="_blank" style="color:#4f6071">Lue Tao</a>, <a href="https://lfeng-ntu.github.io/" target="_blank" style="color:#4f6071">Lei Feng</a>, <b>Hongxin Wei</b>, Jinfeng Yi, Shengjun Huang, Songcan Chen
+                        </div>
+                    </div>
+                </div>
+
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <video width="100%" playsinline="" autoplay="" loop="" preload="" muted="">
+                            <source src="lfns/img/rooms_360_compressed.mp4" type="video/mp4">
+                        </video>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Analytic Class-Incremental Learning with Absolute Memorization and Privacy Protection.
+                        </div>
+                        <div class='paper-desc'>
+                            Under Review
+                        </div>
+                        <div class='paper-authors'>
+                            Huiping Zhuang, Zhenyu Weng, <b>Hongxin Wei</b>, Renchunzi Xie, Toh Kar-Ann, Zhiping Lin
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <video width="100%" playsinline="" autoplay="" loop="" preload="" muted="">
+                            <source src="lfns/img/rooms_360_compressed.mp4" type="video/mp4">
+                        </video>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Mitigating Neural Network Overconfidence with Logit Normalization.
+                        </div>
+                        <div class='paper-desc'>
+                            Under Review
+                        </div>
+                        <div class='paper-authors'>
+                            <b>Hongxin Wei</b>, Renchunzi Xie, Hao Cheng, <a href="https://lfeng-ntu.github.io/" target="_blank" style="color:#4f6071">Lei Feng</a>, Bo An, Sharon Li
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <video width="100%" playsinline="" autoplay="" loop="" preload="" muted="">
+                            <source src="lfns/img/rooms_360_compressed.mp4" type="video/mp4">
+                        </video>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
                             Open-Sampling: Re-balancing Long-tailed datasets with Out-of-Distribution data.
                         </div>
                         <div class='paper-desc'>
