--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     Hongxin Wei
                   </div>
                   <div id='header-text-title'>
-                    Ph.D. student @ NTU, Singapore
+                    Ph.D. Candidate @ NTU, Singapore
                   </div>
                 <!-- </br> -->
                   <div id='header-text-email'>
