add TNNLS paper

--- a/index.html
+++ b/index.html
@@ -231,6 +231,26 @@
                     ( <sup>*</sup> Corresponding author; <sup>&#8224</sup> Equal contribution)
                 </div>
 
+
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <img src='imgs/srn_seg_repimage.jpg' class='img-fluid'>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Deep Learning from Multiple Noisy Annotators as A Union.
+                        </div>
+                        <div class='paper-desc'>
+				            TNNLS
+                        </div>
+                        <div class='paper-authors'>
+                            <b>Hongxin Wei</b>, Renchunzi Xie, Lei Feng, Bo Han, Bo An.
+                        </div>
+                    </div>
+                </div>
+
+
                 <div class='row vspace-top'>
                     <!-- <div class="col-sm-3">
                         <video width="100%" playsinline="" autoplay="" loop="" preload="" muted="">
@@ -421,23 +441,6 @@
                     </div>
                 </div>
 
-                <div class='row vspace-top'>
-                    <!-- <div class="col-sm-3">
-                        <img src='imgs/srn_seg_repimage.jpg' class='img-fluid'>
-                    </div> -->
-
-                    <div class="col">
-                        <div class='paper-title'>
-                            Deep Learning from Multiple Noisy Annotators as A Union.
-                        </div>
-                        <div class='paper-desc'>
-				            Under Review
-                        </div>
-                        <div class='paper-authors'>
-                            <b>Hongxin Wei</b>, Renchunzi Xie, Lei Feng, Bo Han, Bo An.
-                        </div>
-                    </div>
-                </div>
 
                 <div class='row vspace-top'>
                     <!-- <div class="col-sm-3">
