--- a/index.html
+++ b/index.html
@@ -231,6 +231,47 @@
                     ( <sup>*</sup> Corresponding author; <sup>&#8224</sup> Equal contribution)
                 </div>
 
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <video width="100%" playsinline="" autoplay="" loop="" preload="" muted="">
+                            <source src="lfns/img/rooms_360_compressed.mp4" type="video/mp4">
+                        </video>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Mitigating Neural Network Overconfidence with Logit Normalization.
+                        </div>
+                        <div class='paper-desc'>
+                            ICML 2022
+                        </div>
+                        <div class='paper-authors'>
+                            <b>Hongxin Wei</b>, Renchunzi Xie, Hao Cheng, <a href="https://lfeng-ntu.github.io/" target="_blank" style="color:#4f6071">Lei Feng</a>, Bo An, Sharon Li
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <video width="100%" playsinline="" autoplay="" loop="" preload="" muted="">
+                            <source src="lfns/img/rooms_360_compressed.mp4" type="video/mp4">
+                        </video>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Open-Sampling: Re-balancing Long-tailed datasets with Out-of-Distribution data.
+                        </div>
+                        <div class='paper-desc'>
+                            ICML 2022
+                        </div>
+                        <div class='paper-authors'>
+                            <b>Hongxin Wei</b>, <a href="https://tlmichael.github.io/" target="_blank" style="color:#4f6071">Lue Tao</a>, Renchunzi Xie, <a href="https://lfeng-ntu.github.io/" target="_blank" style="color:#4f6071">Lei Feng</a>, Bo An
+                        </div>
+                    </div>
+                </div>
+
 
                 <div class='row vspace-top'>
                     <!-- <div class="col-sm-3">
@@ -292,46 +333,7 @@
                 </div>
 
 
-                <div class='row vspace-top'>
-                    <!-- <div class="col-sm-3">
-                        <video width="100%" playsinline="" autoplay="" loop="" preload="" muted="">
-                            <source src="lfns/img/rooms_360_compressed.mp4" type="video/mp4">
-                        </video>
-                    </div> -->
 
-                    <div class="col">
-                        <div class='paper-title'>
-                            Mitigating Neural Network Overconfidence with Logit Normalization.
-                        </div>
-                        <div class='paper-desc'>
-                            Under Review
-                        </div>
-                        <div class='paper-authors'>
-                            <b>Hongxin Wei</b>, Renchunzi Xie, Hao Cheng, <a href="https://lfeng-ntu.github.io/" target="_blank" style="color:#4f6071">Lei Feng</a>, Bo An, Sharon Li
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class='row vspace-top'>
-                    <!-- <div class="col-sm-3">
-                        <video width="100%" playsinline="" autoplay="" loop="" preload="" muted="">
-                            <source src="lfns/img/rooms_360_compressed.mp4" type="video/mp4">
-                        </video>
-                    </div> -->
-
-                    <div class="col">
-                        <div class='paper-title'>
-                            Open-Sampling: Re-balancing Long-tailed datasets with Out-of-Distribution data.
-                        </div>
-                        <div class='paper-desc'>
-                            Under Review
-                        </div>
-                        <div class='paper-authors'>
-                            <b>Hongxin Wei</b>, <a href="https://tlmichael.github.io/" target="_blank" style="color:#4f6071">Lue Tao</a>, Renchunzi Xie, <a href="https://lfeng-ntu.github.io/" target="_blank" style="color:#4f6071">Lei Feng</a>, Bo An
-                        </div>
-                    </div>
-                </div>
 
                 <div class='row vspace-top'>
                     <!-- <div class="col-sm-3">
