--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 
                     <div class="col">
                         <div class='paper-title'>
-                            Open-Sampling: Re-balancing Long-tailed datasets with Out-of-Distribution data.
+                            Open-Sampling: Exploring Out-of-Distribution data for Re-balancing Long-tailed datasets
                         </div>
                         <div class='paper-desc'>
                             ICML 2022
