--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                             ICML 2022
                         </div>
                         <div class='paper-authors'>
-                            <b>Hongxin Wei</b>, Renchunzi Xie, Hao Cheng, <a href="https://lfeng-ntu.github.io/" target="_blank" style="color:#4f6071">Lei Feng</a>, Bo An, Sharon Li
+                            <b>Hongxin Wei</b>, Renchunzi Xie, Hao Cheng, <a href="https://lfeng-ntu.github.io/" target="_blank" style="color:#4f6071">Lei Feng</a>, Bo An, <a href="https://pages.cs.wisc.edu/~sharonli/" target="_blank" style="color:#4f6071">Sharon Li</a>
                         </div>
                     </div>
                 </div>
