--- a/index.html
+++ b/index.html
@@ -139,6 +139,24 @@
 
                 <div class='row vspace-top-news'>
                     <div class="col-sm-2 news-date">
+                        May 2022
+                    </div>
+                    <div class="col">
+                        Two papers accepted by ICML 2022 (Accept rate: 21.9%).
+                    </div>
+                </div>
+
+                <div class='row vspace-top-news'>
+                    <div class="col-sm-2 news-date">
+                        April 2022
+                    </div>
+                    <div class="col">
+                        I will be serving as a reviewer for NeurIPS 2022.
+                    </div>
+                </div>
+
+                <div class='row vspace-top-news'>
+                    <div class="col-sm-2 news-date">
                         December 2021
                     </div>
                     <div class="col">
