--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         May 2022
                     </div>
                     <div class="col">
-                        Two papers accepted by ICML 2022 (Accept rate: 21.9%).
+                        Two papers are accepted by ICML 2022 (Accept rate: 21.9%).
                     </div>
                 </div>
 
