--- a/index.html
+++ b/index.html
@@ -310,46 +310,6 @@
                 </div>
 
 
-                <div class='row vspace-top'>
-                    <!-- <div class="col-sm-3">
-                        <video width="100%" playsinline="" autoplay="" loop="" preload="" muted="">
-                            <source src="lfns/img/rooms_360_compressed.mp4" type="video/mp4">
-                        </video>
-                    </div> -->
-
-                    <div class="col">
-                        <div class='paper-title'>
-                            Can Adversarial Training Be Manipulated By Non-Robust Features?
-                        </div>
-                        <div class='paper-desc'>
-                            Under Review
-                        </div>
-                        <div class='paper-authors'>
-                            <a href="https://tlmichael.github.io/" target="_blank" style="color:#4f6071">Lue Tao</a>, <a href="https://lfeng-ntu.github.io/" target="_blank" style="color:#4f6071">Lei Feng</a>, <b>Hongxin Wei</b>, Jinfeng Yi, Shengjun Huang, Songcan Chen
-                        </div>
-                    </div>
-                </div>
-
-                <div class='row vspace-top'>
-                    <!-- <div class="col-sm-3">
-                        <video width="100%" playsinline="" autoplay="" loop="" preload="" muted="">
-                            <source src="lfns/img/rooms_360_compressed.mp4" type="video/mp4">
-                        </video>
-                    </div> -->
-
-                    <div class="col">
-                        <div class='paper-title'>
-                            Analytic Class-Incremental Learning with Absolute Memorization and Privacy Protection.
-                        </div>
-                        <div class='paper-desc'>
-                            Under Review
-                        </div>
-                        <div class='paper-authors'>
-                            Huiping Zhuang, Zhenyu Weng, <b>Hongxin Wei</b>, Renchunzi Xie, Toh Kar-Ann, Zhiping Lin
-                        </div>
-                    </div>
-                </div>
-
 
 
 
@@ -440,26 +400,7 @@
                     </div>
                 </div>
 
-                <div class='row vspace-top'>
-                    <!-- <div class="col-sm-3">
-                        <img src='imgs/star_img.png' class='img-fluid'>
-                    </div> -->
 
-                    <div class="col">
-                        <div class='paper-title'>
-                            MetaInfoNet: Learning Task-Guided Information for Sample Reweighting.
-                        </div>
-                        <div class='paper-desc'>
-                            Preprints
-                        </div>
-                        <div class='paper-authors'>
-                            <b>Hongxin Wei</b>, Lei Feng, Rundong Wang, Bo An.
-                        </div>
-                        <div>
-                            <a href="https://arxiv.org/pdf/2012.05273.pdf" target="_blank">[Paper]</a>
-                        </div>
-                    </div>
-                </div>
 
 
                 <div class='row vspace-top'>
@@ -525,6 +466,74 @@
                          <a href="https://arxiv.org/pdf/2003.02752.pdf" target="_blank">[Paper]</a>
                          <a href="https://github.com/hongxin001/JoCoR" target="_blank">[Code]</a>
                       </div>
+                    </div>
+                </div>
+
+                <div class='vspace-top'>
+                    <h1>Preprints</h1>
+                    <!-- (* Corresponding author; &#8224 Equal contribution) -->
+                    <!-- <span style="font-size: 15px; vertical-align: bottom;">(* Corresponding author; &#8224 Equal contribution)</span> -->
+                </div>
+
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <img src='imgs/star_img.png' class='img-fluid'>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            MetaInfoNet: Learning Task-Guided Information for Sample Reweighting.
+                        </div>
+                        <div class='paper-desc'>
+                            Preprints
+                        </div>
+                        <div class='paper-authors'>
+                            <b>Hongxin Wei</b>, Lei Feng, Rundong Wang, Bo An.
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/pdf/2012.05273.pdf" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
+                
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <video width="100%" playsinline="" autoplay="" loop="" preload="" muted="">
+                            <source src="lfns/img/rooms_360_compressed.mp4" type="video/mp4">
+                        </video>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Can Adversarial Training Be Manipulated By Non-Robust Features?
+                        </div>
+                        <div class='paper-desc'>
+                            Under Review
+                        </div>
+                        <div class='paper-authors'>
+                            <a href="https://tlmichael.github.io/" target="_blank" style="color:#4f6071">Lue Tao</a>, <a href="https://lfeng-ntu.github.io/" target="_blank" style="color:#4f6071">Lei Feng</a>, <b>Hongxin Wei</b>, Jinfeng Yi, Shengjun Huang, Songcan Chen
+                        </div>
+                    </div>
+                </div>
+
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <video width="100%" playsinline="" autoplay="" loop="" preload="" muted="">
+                            <source src="lfns/img/rooms_360_compressed.mp4" type="video/mp4">
+                        </video>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Analytic Class-Incremental Learning with Absolute Memorization and Privacy Protection.
+                        </div>
+                        <div class='paper-desc'>
+                            Under Review
+                        </div>
+                        <div class='paper-authors'>
+                            Huiping Zhuang, Zhenyu Weng, <b>Hongxin Wei</b>, Renchunzi Xie, Toh Kar-Ann, Zhiping Lin
+                        </div>
                     </div>
                 </div>
 
