--- a/index.html
+++ b/index.html
@@ -581,6 +581,13 @@
                     <iframe src="https://confsearch.ethz.ch/confsearch/faces/pages/staticresults.jsp?query=aaai%20ijcai%20kdd%20icml%20www%20NeurIPS%20cvpr%20iccv%20iclr&sortMode=1&graphicView=1" height="700" width="800" name="confsearch_frame"
                         frameborder="0"> </iframe>
                 </div>
+                
+                <div class='vspace-top'>
+                    <h1>Website Visitors</h1>
+                </div>
+                <div class='row vspace-top-visitors'>
+                    <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=600&t=tt&d=ep-5MSCjViZ8GSZEGsLxM4xvm8b8OP7cqrBY_dV9XQo&co=2d78ad&cmo=3acc3a&cmn=ff5353&ct=ffffff'></script>
+                </div>
             </div>
         </div>
     </div>
