--- a/index.html
+++ b/index.html
@@ -582,12 +582,12 @@
                         frameborder="0"> </iframe>
                 </div>
                 
-                <div class='vspace-top'>
+                <!-- <div class='vspace-top'>
                     <h1>Website Visitors</h1>
                 </div>
                 <div class='row vspace-top-visitors'>
                     <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=600&t=tt&d=ep-5MSCjViZ8GSZEGsLxM4xvm8b8OP7cqrBY_dV9XQo&co=2d78ad&cmo=3acc3a&cmn=ff5353&ct=ffffff'></script>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
